feat: Actualización de scripts de lanzamiento y mejora de la documentación
- Se eliminaron los scripts obsoletos `launch.bat` y `launch.sh`, reemplazándolos por `launch-forevernote.bat` y `launch-forevernote.sh` que configuran automáticamente el module-path para JavaFX.
- Se actualizaron las referencias en `AGENTS.md` y `README.md` para reflejar los nuevos scripts de lanzamiento.
- Se corrigieron errores en la documentación, incluyendo la ubicación de `BUILD.md` y la estructura de archivos en el proyecto.
- Se mejoró la gestión de favoritos en la interfaz de usuario, asegurando que la lista de favoritos se actualice correctamente al realizar cambios en las notas.