@@ -2,6 +2,20 @@
 
 A lightweight desktop application for managing notes with hierarchical organization through folders and tags. Built with Java and JavaFX, featuring SQLite for persistent storage, Markdown support with live preview, and a modern, intuitive user interface.
 
+## Table of Contents
+
+- [Features](#features)
+- [Technology Stack](#technology-stack)
+- [Prerequisites](#prerequisites)
+- [Quick Start](#quick-start)
+- [Documentation](#documentation)
+- [Project Structure](#project-structure)
+- [Configuration](#configuration)
+- [Troubleshooting](#troubleshooting)
+- [Development](#development)
+- [License](#license)
+- [Contributing](#contributing)
+
 ## Features
 
 - **Note Management**: Create, edit, and delete notes with titles and content
@@ -12,8 +26,10 @@ A lightweight desktop application for managing notes with hierarchical organizat
 - **Search**: Global search across all notes (titles and content)
 - **Auto-refresh**: Notes list automatically updates on save/delete operations
 - **Zoom Controls**: Adjust text size (50%-300%)
-- **Theme Support**: Light, dark, and system theme options (placeholder)
+- **Theme Support**: Light, dark, and system theme options
 - **Keyboard Shortcuts**: Comprehensive keyboard shortcuts for all operations
+- **Favorites**: Mark notes as favorites for quick access
+- **Recent Notes**: Quick access to recently modified notes
 - **To-Do Support**: Mark notes as to-do items with completion tracking
 - **Logging**: Comprehensive application logging for debugging and monitoring
 
@@ -24,6 +40,7 @@ A lightweight desktop application for managing notes with hierarchical organizat
 - **SQLite**: Lightweight relational database
 - **Maven 3.9+**: Build automation and dependency management
 - **JUnit 5**: Unit testing framework
+- **CommonMark**: Markdown processing library
 
 ## Prerequisites
 
@@ -79,142 +96,40 @@ cd Forevernote
 
 This creates an executable JAR at `Forevernote/target/forevernote-1.0.0-uber.jar`.
 
-**Note**: During compilation, you may see warnings like "Failed to build parent project for org.openjfx:javafx-*". These are **normal and harmless** - they occur because Maven tries to build the JavaFX parent project, which is not necessary. The build will still succeed.
+**Note**: During compilation, you may see warnings like "Failed to build parent project for org.openjfx:javafx-*". These are normal and harmless - they occur because Maven tries to build the JavaFX parent project, which is not necessary. The build will still succeed.
 
 ### 3. Run the Application
 
 **Windows (PowerShell):**
 ```powershell
-.\scripts\run_all.ps1
+.\scripts\launch-forevernote.ps1
+```
+
+**Windows (CMD):**
+```cmd
+.\scripts\launch-forevernote.bat
 ```
 
 **macOS/Linux (Bash):**
 ```bash
-./scripts/run_all.sh
+./scripts/launch-forevernote.sh
 ```
 
-The scripts automatically:
-- Detect JavaFX modules in your Maven repository
-- Configure the Java module-path correctly
-- Launch the application
+The scripts automatically detect JavaFX modules in your Maven repository and configure the Java module-path correctly.
 
-## Building and Running with VS Code
+For more detailed build and setup instructions, see [Build and Setup Guide](doc/BUILD.md).
 
-### Prerequisites
+## Documentation
 
-1. **Install Java 17 JDK** (not just JRE)
-   - Ensure `java -version` shows version 17
-   - VS Code will detect it automatically
+Comprehensive documentation is available in the `doc/` directory:
 
-2. **Install VS Code Extensions**:
-   - Open VS Code
-   - Press `Ctrl+Shift+X` (or `Cmd+Shift+X` on macOS)
-   - Search and install: **Extension Pack for Java**
-   - This includes all necessary Java extensions
+- **[Build and Setup Guide](doc/BUILD.md)**: Complete guide for building, running, and setting up the development environment. Includes prerequisites, build methods, VS Code configuration, troubleshooting, and project structure.
 
-3. **Configure Java Runtime** (if needed):
-   - Press `Ctrl+Shift+P` (or `Cmd+Shift+P` on macOS)
-   - Type: `Java: Configure Java Runtime`
-   - Select Java 17 as the default runtime
-   - If Java 17 doesn't appear, add it manually pointing to your JDK 17 installation
+- **[Standalone Application Guide](doc/LAUNCH_APP.md)**: Instructions for using Forevernote as a standalone application without development tools. Covers executable JAR usage, launch scripts, and creating desktop shortcuts.
 
-### Building in VS Code
+- **[Native Installer Guide](doc/PACKAGING.md)**: Guide for creating native installers (MSI for Windows, DMG for macOS, DEB/RPM for Linux) using jpackage. Includes prerequisites, platform-specific instructions, and distribution guidelines.
 
-**Method 1: Using Tasks (Recommended)**
-1. Press `Ctrl+Shift+B` (or `Cmd+Shift+B` on macOS)
-2. Select **"maven-compile"** to compile
-3. Or select **"maven-package"** to build the JAR
-
-**Method 2: Using Terminal**
-1. Open integrated terminal: `Ctrl+`` (backtick)
-2. Run:
-   ```bash
-   cd Forevernote
-   mvn clean package -DskipTests
-   ```
-
-### Running in VS Code
-
-**Method 1: Using Debug/Run (Recommended)**
-1. Press `F5` or go to **Run and Debug** (Ctrl+Shift+D)
-2. Select **"Launch Forevernote (Maven JavaFX)"** from the dropdown
-3. Click the green play button or press `F5`
-4. The application will launch with JavaFX properly configured
-
-**Method 2: Using Tasks**
-1. Press `Ctrl+Shift+P` (or `Cmd+Shift+P` on macOS)
-2. Type: `Tasks: Run Task`
-3. Select **"maven-exec-java"** to run via Maven
-
-**Method 3: Using Terminal**
-1. Open integrated terminal: `Ctrl+`` (backtick)
-2. Run:
-   ```bash
-   cd Forevernote
-   mvn javafx:run
-   ```
-
-### Troubleshooting VS Code
-
-**Problem**: VS Code shows errors for JavaFX imports
-- **Solution**: 
-  1. Press `Ctrl+Shift+P` → `Java: Clean Java Language Server Workspace`
-  2. Press `Ctrl+Shift+P` → `Java: Reload Projects`
-  3. Wait 1-2 minutes for Maven to sync dependencies
-
-**Problem**: "JavaFX runtime components are missing" when running
-- **Solution**: Use the "Launch Forevernote (Maven JavaFX)" configuration, which uses Maven's JavaFX plugin
-
-**Problem**: VS Code uses Java 21 instead of Java 17
-- **Solution**: 
-  1. Press `Ctrl+Shift+P` → `Java: Configure Java Runtime`
-  2. Set Java 17 as default
-  3. Update `.vscode/settings.json` if needed (see configuration section)
-
-## Alternative: Build and Run Manually
-
-### Build
-
-```bash
-cd Forevernote
-mvn clean package -DskipTests
-```
-
-### Run JAR (with scripts - recommended)
-
-The scripts handle JavaFX module-path automatically:
-
-**Windows:**
-```powershell
-.\scripts\run_all.ps1
-```
-
-**macOS/Linux:**
-```bash
-./scripts/run_all.sh
-```
-
-### Run JAR (directly - requires manual module-path)
-
-If you want to run the JAR directly, you need to specify JavaFX modules:
-
-```bash
-java --module-path "C:\Users\<you>\.m2\repository\org\openjfx\javafx-base\21\javafx-base-21.jar;C:\Users\<you>\.m2\repository\org\openjfx\javafx-controls\21\javafx-controls-21.jar;..." --add-modules javafx.base,javafx.controls,javafx.fxml,javafx.graphics,javafx.media,javafx.web -jar Forevernote/target/forevernote-1.0.0-uber.jar
-```
-
-**Note**: This is complex and error-prone. Use the scripts instead.
-
-### Run from Source (Development)
-
-```bash
-cd Forevernote
-mvn exec:java -Dexec.mainClass="com.example.forevernote.Main"
-```
-
-Or using JavaFX Maven plugin:
-```bash
-mvn javafx:run
-```
+For agent-oriented development guidelines, see [AGENTS.md](AGENTS.md).
 
 ## Project Structure
 
@@ -248,21 +163,30 @@ Forevernote/
 │   ├── build_all.sh                     # Unix build script
 │   ├── run_all.ps1                      # Windows run script
 │   ├── run_all.sh                       # Unix run script
-│   ├── schema.txt                       # SQLite schema example
+│   ├── launch-forevernote.ps1           # Windows PowerShell standalone launcher
+│   ├── launch-forevernote.bat           # Windows CMD standalone launcher
+│   ├── launch-forevernote.sh            # Unix standalone launcher
+│   ├── schema.txt                       # Database schema definition
+│   ├── package-windows.ps1              # Windows installer generator
+│   ├── package-macos.sh                 # macOS installer generator
+│   ├── package-linux.sh                 # Linux installer generator
 │   └── README.md                        # Scripts documentation
 │
-├── .vscode/
-│   ├── settings.json                    # VS Code Java configuration
-│   ├── tasks.json                       # VS Code build tasks
-│   ├── launch.json                      # VS Code debug/run configurations
-│   └── extensions.json                  # Recommended VS Code extensions
+├── doc/                                  # Documentation
+│   ├── BUILD.md                          # Build and setup guide
+│   ├── LAUNCH_APP.md                     # Standalone application guide
+│   └── PACKAGING.md                      # Native installer guide
 │
-├── .gitignore                           # Git ignore rules
-├── README.md                            # This file
-├── SETUP.md                             # Quick setup guide
-├── BUILD.md                              # Build documentation
-├── AGENTS.md                            # Agent-oriented development guide
-└── LICENSE                              # MIT License
+├── .vscode/                              # VS Code configuration
+│   ├── settings.json                     # Java configuration
+│   ├── tasks.json                       # Build tasks
+│   ├── launch.json                       # Debug/run configurations
+│   └── extensions.json                  # Recommended extensions
+│
+├── README.md                             # This file
+├── AGENTS.md                             # Agent-oriented development guide
+├── changelog.md                          # Project changelog
+└── LICENSE                               # MIT License
 ```
 
 ## Configuration
@@ -270,6 +194,8 @@ Forevernote/
 ### Database
 
 The application automatically creates a SQLite database at `Forevernote/data/database.db` on first run (when executed from the `Forevernote/` directory). The database includes tables for notes, folders, tags, and their relationships.
+
+For the complete database schema, see [`scripts/schema.txt`](scripts/schema.txt). This file contains the SQL schema definition that can be used to manually create or restore the database structure.
 
 **Note**: The `data/` and `logs/` directories are created automatically when the application runs, not during compilation. The build scripts do not create these directories.
 
@@ -282,31 +208,6 @@ Logging configuration is defined in `src/main/resources/logging.properties`. Log
 The build and run scripts automatically detect JavaFX modules from your Maven repository (`~/.m2/repository/org/openjfx/`). They use specific JAR files (not directories) to avoid loading `-sources.jar` files as modules.
 
 If running the JAR directly fails, use the provided scripts which handle module-path configuration automatically.
-
-## VS Code Configuration
-
-The project includes pre-configured VS Code settings:
-
-- **`.vscode/settings.json`**: Java 17 configuration, Maven settings, excluded files
-- **`.vscode/tasks.json`**: Build tasks (compile, package, test, run)
-- **`.vscode/launch.json`**: Debug/run configurations with JavaFX support
-- **`.vscode/extensions.json`**: Recommended extensions
-
-### VS Code Tasks
-
-Available tasks (press `Ctrl+Shift+P` → `Tasks: Run Task`):
-
-- **maven-compile**: Compile the project
-- **maven-package**: Build the JAR
-- **maven-test**: Run unit tests
-- **maven-exec-java**: Run via Maven (handles JavaFX automatically)
-
-### VS Code Launch Configurations
-
-Available configurations (press `F5` or go to Run and Debug):
-
-- **Launch Forevernote (Maven JavaFX)**: Uses Maven JavaFX plugin (recommended)
-- **Launch Forevernote (Debug)**: Manual module-path configuration for debugging
 
 ## Troubleshooting
 
@@ -350,6 +251,8 @@ Available configurations (press `F5` or go to Run and Debug):
 **Problem**: Can't run from VS Code
 - **Solution**: Use "Launch Forevernote (Maven JavaFX)" configuration which handles everything automatically
 
+For more detailed troubleshooting information, see the [Build and Setup Guide](doc/BUILD.md).
+
 ## Development
 
 ### Running Tests
@@ -364,10 +267,13 @@ mvn test
 - Follow Java naming conventions (PascalCase for classes, camelCase for methods/variables)
 - Use `LoggerConfig.getLogger(ClassName.class)` for logging (not `System.out.println`)
 - Handle exceptions appropriately (use custom exceptions from `exceptions/` package)
+- No wildcard imports (`import java.util.*` not allowed)
 
 ### Adding Dependencies
 
 Add dependencies to `Forevernote/pom.xml` in the `<dependencies>` section. Maven will automatically download them.
+
+For detailed development guidelines, see [AGENTS.md](AGENTS.md).
 
 ## License
 
@@ -377,4 +283,4 @@ This project is licensed under the MIT License. See the [LICENSE](LICENSE) file 
 
 Contributions are welcome! Please feel free to submit a Pull Request.
 
-For detailed development guidelines, see [AGENTS.md](AGENTS.md).
+For detailed development guidelines and contribution standards, see [AGENTS.md](AGENTS.md).
